--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.6",
     "eslint": "^7.24.0",
-    "mustache": "^4.2.0",
-    "supertest": "^6.1.3"
+    "mustache": "^4.2.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
